--- a/src/main/resources/templates/navigator.html
+++ b/src/main/resources/templates/navigator.html
@@ -155,7 +155,7 @@
                         </ul>
                     </li>
 
-                    <li class="nav-item has-treeview">
+                    <li class="nav-item has-treeview menu-open">
                         <a href="#" class="nav-link">
                             <i class="nav-icon fas fa-list"></i>
                             <p>
@@ -167,7 +167,23 @@
                             <li class="nav-item">
                                 <a href="/classify" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
-                                    <p>客户分类</p>
+                                    <p>数据预处理</p>
+                                </a>
+                            </li>
+                        </ul>
+                        <ul class="nav nav-treeview">
+                            <li class="nav-item">
+                                <a href="/decisionTreeModelSetting" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>决策树模型设置</p>
+                                </a>
+                            </li>
+                        </ul>
+                        <ul class="nav nav-treeview">
+                            <li class="nav-item">
+                                <a href="/classificationManagement" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>分类管理</p>
                                 </a>
                             </li>
                         </ul>
