--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,76 +18,84 @@
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
-<body class="hold-transition login-page">
-<div class="login-box">
-  <div th:if="${errorMsg}!=null">
-    <script th:inline="javascript">
-      var errorMsg=[[${errorMsg}]];
-      alert(errorMsg);
-    </script>
-  </div>
-
-  <div class="login-logo">
-    <a href="#"><b>东港江海文化大酒店</b></a>
-  </div>
-  <!-- /.login-logo -->
-  <div class="card">
-    <div class="card-body login-card-body">
-      <p class="login-box-msg">请登录您的管理员账户</p>
-
-      <form action="/login" method="post">
-        <div class="input-group mb-3">
-          <input type="username" name="username" class="form-control" placeholder="Username">
-          <div class="input-group-append">
-            <div class="input-group-text">
-              <span class="fas fa-user"></span>
-            </div>
-          </div>
-        </div>
-        <div class="input-group mb-3">
-          <input type="password" name="password" class="form-control" placeholder="Password">
-          <div class="input-group-append">
-            <div class="input-group-text">
-              <span class="fas fa-lock"></span>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-8">
-            <div class="icheck-primary">
-              <input type="checkbox" id="remember">
-              <label for="remember">
-                记住我
-              </label>
-            </div>
-          </div>
-          <!-- /.col -->
-          <div class="col-4">
-            <button type="submit" class="btn btn-primary btn-block">登录</button>
-          </div>
-          <!-- /.col -->
-        </div>
-      </form>
-
-      <hr/>
-
-
-
-      <!-- /.social-auth-links -->
-      <div class="row">
-        <p class="mb-1" >
-          <a href="forgot-password.html">忘记密码</a>
-        </p>
-        &nbsp;&nbsp;&nbsp;&nbsp;
-        <p class="mb-0" >
-          <a href="/register" class="text-center">注册新账号</a>
-        </p>
-      </div>
-
+<body
+      style="background-image: url('img/login.png');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+">
+<div class="hold-transition login-page" style="background: rgba(255,255,255,0.5)" >
+  <div class="login-box">
+    <div th:if="${errorMsg}!=null">
+      <script th:inline="javascript">
+        var errorMsg=[[${errorMsg}]];
+        alert(errorMsg);
+      </script>
     </div>
-    <!-- /.login-card-body -->
+
+    <div class="login-logo">
+      <a href="#"><b>东港江海文化大酒店</b></a>
+    </div>
+    <!-- /.login-logo -->
+    <div class="card">
+      <div class="card-body login-card-body">
+        <p class="login-box-msg">请登录您的管理员账户</p>
+
+        <form action="/login" method="post">
+          <div class="input-group mb-3">
+            <input type="username" name="username" class="form-control" placeholder="Username">
+            <div class="input-group-append">
+              <div class="input-group-text">
+                <span class="fas fa-user"></span>
+              </div>
+            </div>
+          </div>
+          <div class="input-group mb-3">
+            <input type="password" name="password" class="form-control" placeholder="Password">
+            <div class="input-group-append">
+              <div class="input-group-text">
+                <span class="fas fa-lock"></span>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-8">
+              <div class="icheck-primary">
+                <input type="checkbox" id="remember">
+                <label for="remember">
+                  记住我
+                </label>
+              </div>
+            </div>
+            <!-- /.col -->
+            <div class="col-4">
+              <button type="submit" class="btn btn-primary btn-block">登录</button>
+            </div>
+            <!-- /.col -->
+          </div>
+        </form>
+
+        <hr/>
+
+
+
+        <!-- /.social-auth-links -->
+        <div class="row">
+          <!--        <p class="mb-1" >-->
+          <!--          <a href="forgot-password.html">忘记密码</a>-->
+          <!--        </p>-->
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          <p class="mb-0" >
+            <a href="/register" class="text-center">注册新账号</a>
+          </p>
+        </div>
+
+      </div>
+      <!-- /.login-card-body -->
+    </div>
   </div>
 </div>
+
 <!-- /.login-box -->
 
 <!-- jQuery -->
