--- a/src/main/resources/templates/satisfaction_calculating.html
+++ b/src/main/resources/templates/satisfaction_calculating.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>酒店管理系统</title>
+
+    <!-- Select2 -->
+    <link rel="stylesheet" href="plugins/select2/css/select2.min.css">
+    <link rel="stylesheet" href="plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
+
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
     <!-- IonIcons -->
@@ -78,16 +83,19 @@
                     <div class="card-body">
                         <form method="post" id="client_satisfaction_form">
                             <div class="form-group">
-                                <label>客户档案号:</label>
+                                <label>客户选择:</label>
                                 <div class="input-group">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"><i class="fas fa-user"></i></span>
                                     </div>
-                                    <input type="text" class="form-control" name="clientId"/>
+                                    <select class="form-control select2" style="height: inherit" name="clientId">
+                                        <option value=""></option>
+                                        <option th:each="info,infoStat:${clientInfos}" th:value="${info.clientId}" th:text="${info.name}+'(档案号:'+${info.clientId}+')'"></option>
+                                    </select>
+<!--                                    <input type="text" class="form-control" name="clientId"/>-->
                                 </div>
-                                <!-- /.input group -->
-                            </div>
 
+                            </div>
                             <hr/>
                             <!-- 客户满意度评价表填写 -->
                             <table class="table table-bordered">
@@ -256,14 +264,14 @@
 <script src="plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
 <script src="plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
 <script src="plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
-<!-- jQuery Knob -->
-<script src="../../plugins/jquery-knob/jquery.knob.min.js"></script>
 <!-- AdminLTE App -->
 <script src="dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="dist/js/demo.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/my.js"></script>
+<!-- Select2 -->
+<script src="plugins/select2/js/select2.full.min.js"></script>
 <script type="text/javascript" th:inline="javascript">
     $(function () {
         $("#example1").DataTable({
@@ -281,6 +289,7 @@
             "autoWidth": false,
             "responsive": true,
         });
+        $('.select2').select2();
     });
 
     //选中表格中的行
