--- a/src/main/resources/templates/value_calculating.html
+++ b/src/main/resources/templates/value_calculating.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>酒店管理系统</title>
+    <!-- Select2 -->
+    <link rel="stylesheet" th:href="@{plugins/select2/css/select2.min.css}">
+    <link rel="stylesheet" th:href="@{plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css}">
+
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" th:href="@{plugins/fontawesome-free/css/all.min.css}" href="plugins/fontawesome-free/css/all.min.css">
     <!-- IonIcons -->
@@ -55,13 +59,20 @@
 
                     <div class="card-body">
                         <div class="form-group">
-                            <label>客户档案号:</label>
+                            <label>客户选择:</label>
                             <div class="input-group">
-                                    <div class="input-group-prepend">
+                                    <div class="input-group-prepend float-left">
                                         <span class="input-group-text"><i class="fas fa-user"></i></span>
                                     </div>
-                                    <input type="text" class="form-control" id="client_id" th:value="${clientValuePageInfo.clientId}"/>
-                                    <button class="btn btn-primary input-group-append" onclick="search_client_value_page_info()">查询</button>
+                                    <select class="form-control input-group select2 float-left" style="width: 90%" name="clientId">
+                                        <option value=""></option>
+                                        <div th:each="info,infoStat:${clientInfos}" >
+                                            <option th:if="${clientValuePageInfo.clientId}==${info.clientId}" selected th:value="${info.clientId}" th:text="${info.name}+'(档案号:'+${info.clientId}+')'"></option>
+                                            <option th:unless="${clientValuePageInfo.clientId}==${info.clientId}" th:value="${info.clientId}" th:text="${info.name}+'(档案号:'+${info.clientId}+')'"></option>
+                                        </div>
+                                    </select>
+<!--                                    <input type="text" class="form-control" id="client_id" th:value="${clientValuePageInfo.clientId}"/>-->
+                                    <button class="btn btn-primary input-group-append float-right" onclick="search_client_value_page_info()">查询</button>
 
                             </div>
                             <!-- /.input group -->
@@ -180,7 +191,7 @@
                                                         <p>房费收入率</p>
                                                     </div>
                                                     <div class="icon">
-                                                        <i class="ion ion-bag"></i>
+                                                        <i class="fa fa-home"></i>
                                                     </div>
                                                 </div>
                                             </div>
@@ -193,7 +204,7 @@
                                                         <p>销售收入率</p>
                                                     </div>
                                                     <div class="icon">
-                                                        <i class="ion ion-stats-bars"></i>
+                                                        <i class="fa fa-shopping-cart"></i>
                                                     </div>
                                                 </div>
                                             </div>
@@ -206,7 +217,7 @@
                                                         <p>交易成功率</p>
                                                     </div>
                                                     <div class="icon">
-                                                        <i class="ion ion-person-add"></i>
+                                                        <i class="fa fa-handshake"></i>
                                                     </div>
                                                 </div>
                                             </div>
@@ -215,11 +226,11 @@
                                                 <!-- small box -->
                                                 <div class="small-box bg-danger">
                                                     <div class="inner">
-                                                        <h3 id="clientValue">0</h3>
+                                                        <h3 id="clientValue" >0</h3>
                                                         <p>客户价值</p>
                                                     </div>
                                                     <div class="icon">
-                                                        <i class="ion ion-pie-graph"></i>
+                                                        <i class="fa fa-dollar-sign"></i>
                                                     </div>
                                                 </div>
                                             </div>
@@ -295,24 +306,12 @@
 <script th:src="@{dist/js/demo.js}"></script>
 <script type="text/javascript" th:src="@{js/bootstrap.min.js}"></script>
 <script type="text/javascript" th:src="@{js/my.js}"></script>
+<!-- Select2 -->
+<script th:src="@{plugins/select2/js/select2.full.min.js}"></script>
 
 <script>
     $(function () {
-        $("#example1").DataTable({
-            "responsive": true,
-            "autoWidth": false,
-            "ordering": true,
-            "info": true
-        });
-        $('#example2').DataTable({
-            "paging": true,
-            "lengthChange": false,
-            "searching": false,
-            "ordering": true,
-            "info": true,
-            "autoWidth": false,
-            "responsive": true,
-        });
+        $('.select2').select2();
     });
 
     //选中表格中的行
@@ -324,7 +323,7 @@
     });
 
     function search_client_value_page_info() {
-        var clientId=$("#client_id").val();
+        var clientId=$("select[name='clientId']")[0].value;
         window.location.href="/valueCalculating/"+clientId;
     }
     
@@ -356,71 +355,6 @@
         });
 
     }
-
-
-    // function draw_result_chart () {
-    //
-    //     $('.knob').knob({
-    //         draw: function () {
-    //
-    //             // "tron" case
-    //             if (this.$.data('skin') == 'tron') {
-    //
-    //                 var a   = this.angle(this.cv)  // Angle
-    //                     ,
-    //                     sa  = this.startAngle          // Previous start angle
-    //                     ,
-    //                     sat = this.startAngle         // Start angle
-    //                     ,
-    //                     ea                            // Previous end angle
-    //                     ,
-    //                     eat = sat + a                 // End angle
-    //                     ,
-    //                     r   = true
-    //
-    //                 this.g.lineWidth = this.lineWidth
-    //
-    //                 this.o.cursor
-    //                 && (sat = eat - 0.3)
-    //                 && (eat = eat + 0.3)
-    //
-    //                 if (this.o.displayPrevious) {
-    //                     ea = this.startAngle + this.angle(this.value)
-    //                     this.o.cursor
-    //                     && (sa = ea - 0.3)
-    //                     && (ea = ea + 0.3)
-    //                     this.g.beginPath()
-    //                     this.g.strokeStyle = this.previousColor
-    //                     this.g.arc(this.xy, this.xy, this.radius - this.lineWidth, sa, ea, false)
-    //                     this.g.stroke()
-    //                 }
-    //
-    //                 this.g.beginPath()
-    //                 this.g.strokeStyle = r ? this.o.fgColor : this.fgColor
-    //                 this.g.arc(this.xy, this.xy, this.radius - this.lineWidth, sat, eat, false)
-    //                 this.g.stroke()
-    //
-    //                 this.g.lineWidth = 2
-    //                 this.g.beginPath()
-    //                 this.g.strokeStyle = this.o.fgColor
-    //                 this.g.arc(this.xy, this.xy, this.radius - this.lineWidth + 1 + this.lineWidth * 2 / 3, 0, 2 * Math.PI, false)
-    //                 this.g.stroke()
-    //
-    //                 return false
-    //             }
-    //         }
-    //     })
-    //     /* END JQUERY KNOB */
-    //
-    //     //INITIALIZE SPARKLINE CHARTS
-    //     $('.sparkline').each(function () {
-    //         var $this = $(this)
-    //         $this.sparkline('html', $this.data())
-    //     })
-    //
-    // }
-    //
-    // draw_result_chart();
 
 </script>
 </body>
